Fix header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ header {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  z-index: 1;
 }
 header .header-link {
   display: inline-block;
